--- a/scripts/01_make_dataset_frontback_yoloseg.ipynb
+++ b/scripts/01_make_dataset_frontback_yoloseg.ipynb
@@ -5,28 +5,28 @@
    "id": "15b25a72",
    "metadata": {},
    "source": [
-    "# 01_make_dataset.ipynb - データセット生成ノートブック\n",
+    "# 01_make_dataset_frontback_yoloseg - データセット生成ノートブック\n",
     "\n",
     "## 概要\n",
-    "このノートブックでは、YOLO-Seg（同方向/逆方向歩行者セグメンテーション）用のデータセットを生成します。\n",
+    "YOLO-Segをファインチューニングする用のデータセットを生成\n",
     "\n",
-    "**処理フロー:**\n",
+    "## 処理フロー（概要）\n",
     "1. COCOアノテーション読み込み\n",
-    "2. **キーポイントフィルタ（IDレベル）** → 全身が映った歩行者がいる画像のみ抽出\n",
-    "3. フィルタ通過IDから train/test/val にサンプリング（**指定枚数 = フィルタ後の枚数**）\n",
+    "2. **キーポイントゲート（IDレベル）**：全身が十分に映っている歩行者がいる画像のみ抽出\n",
+    "3. ゲート通過IDから `train` / `test` / `val` を作成（画像はまだダウンロードしない）\n",
     "4. 通過画像のみダウンロード\n",
-    "5. MEBOWモデルで向き推定 → SAME/OPS分類\n",
-    "6. YOLO-Seg形式のラベル（ポリゴン）に変換・エクスポート\n",
-    "7. data.yaml を生成\n",
+    "5. MEBOWで向き推定 → SAME/OPS分類\n",
+    "6. COCOセグメンテーション → YOLO-Seg形式ラベル（ポリゴン）へ変換・エクスポート\n",
+    "7. `data.yaml` 生成\n",
     "\n",
-    "**クラス定義:**\n",
-    "- `0: SAME` - カメラと同方向を向いている歩行者（角度 ≤45° または ≥315°）\n",
-    "- `1: OPS` - カメラと逆方向を向いている歩行者（それ以外）\n",
+    "## クラス定義\n",
+    "- `0: SAME`：カメラと同方向（角度 $\\le 45^\\circ$ または $\\ge 315^\\circ$）\n",
+    "- `1: OPS`：それ以外（逆方向）\n",
     "\n",
-    "**キーポイントゲート:**\n",
-    "- 必須: 両肩, 両ひざ（可視性 v≥1）\n",
-    "- 1人でも条件を満たす歩行者がいれば → その画像の全personをラベル化\n",
-    "- 誰も満たさなければ → ダウンロードせずスキップ"
+    "## キーポイントゲート\n",
+    "- 必須：両肩・両ひざ（可視性 $v \\ge 1$）\n",
+    "- 画像内に **1人でも** 条件を満たす歩行者がいれば → その画像の全personをラベル化\n",
+    "- 誰も満たさなければ → 画像はダウンロードせずスキップ"
    ]
   },
   {
@@ -41,27 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cdb154fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PROJECT_ROOT: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\n",
-      "  DATA_RAW: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\raw\n",
-      "  DATA_OUT: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\n",
-      "  COCO_ANN_DIR: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\annotations\n",
-      "  MEBOW_ROOT: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\MEBOW\n",
-      "\n",
-      "PyTorch version: 2.5.1+cu121\n",
-      "CUDA available: True\n",
-      "CUDA device: NVIDIA GeForce RTX 4050 Laptop GPU\n",
-      "Using device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# パス設定と環境確認\n",
@@ -122,30 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "34366d1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\annotations\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\raw\\train\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\raw\\test\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\raw\\val\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\images\\train\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\images\\test\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\images\\val\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\labels\\train\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\labels\\test\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\labels\\val\n",
-      "OK C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\runs\n",
-      "\n",
-      "Directory structure created.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# ディレクトリ構造の作成\n",
@@ -193,27 +156,27 @@
    "source": [
     "## 3. COCOアノテーション読み込み → キーポイントフィルタ → Split作成\n",
     "\n",
-    "COCOアノテーションから person を含む画像IDを抽出し、**キーポイントゲートで品質フィルタ後に** train/test/val に分割します。\n",
+    "COCOアノテーションから person を含む画像IDを抽出し、**キーポイントゲートで品質フィルタ**した上で split（train/test/val）を作成します。\n",
     "\n",
-    "**手順:**\n",
+    "### 手順\n",
     "1. instances + keypoints アノテーションをロード\n",
-    "2. 全person画像に対してキーポイントゲート判定（アノテーション参照のみ、画像不要）\n",
-    "3. ゲート通過IDからサンプリング → `N_TRAIN`, `N_TEST` = **フィルタ後の枚数**\n",
-    "4. val はフィルタ後の全数\n",
+    "2. person を含む画像IDに対してキーポイントゲート判定（**アノテーション参照のみ**で、画像のダウンロードはまだ不要）\n",
+    "3. ゲート通過IDをシャッフルし、`N_TRAIN` / `N_TEST` 分だけ抽出（不足する場合は存在分）\n",
+    "4. `val` は `val2017` のゲート通過IDを全数使用\n",
     "\n",
-    "**キーポイントゲート条件:**\n",
-    "- 必須: `left_shoulder`(5), `right_shoulder`(6), `left_knee`(13), `right_knee`(14)\n",
-    "- 可視性: `v >= 1`（ラベル付き）\n",
+    "### キーポイントゲート条件\n",
+    "- 必須：`left_shoulder`(5), `right_shoulder`(6), `left_knee`(13), `right_knee`(14)\n",
+    "- 可視性：`v >= 1`（ラベル付き。遮蔽を含む）\n",
     "- 画像内に1人でも条件を満たす歩行者がいれば通過\n",
     "\n",
-    "**前提:** アノテーションファイルが必要です\n",
+    "### 前提（必要ファイル）\n",
     "- `data/annotations/instances_train2017.json`\n",
     "- `data/annotations/instances_val2017.json`\n",
     "- `data/annotations/person_keypoints_train2017.json`\n",
     "- `data/annotations/person_keypoints_val2017.json`\n",
     "\n",
-    "まだない場合は以下からDL:\n",
-    "```\n",
+    "未取得の場合：\n",
+    "```text\n",
     "http://images.cocodataset.org/annotations/annotations_trainval2017.zip\n",
     "```"
    ]
@@ -223,42 +186,7 @@
    "execution_count": null,
    "id": "928cd213",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OK: instances_train2017.json, instances_val2017.json, person_keypoints_train2017.json, person_keypoints_val2017.json\n",
-      "loading annotations into memory...\n",
-      "Done (t=9.83s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "loading annotations into memory...\n",
-      "Done (t=0.34s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "loading annotations into memory...\n",
-      "Done (t=5.19s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "loading annotations into memory...\n",
-      "Done (t=0.16s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "\n",
-      "train2017 person images: 64115\n",
-      "  → gate passed: 36819  (filtered out: 27296)\n",
-      "\n",
-      "val2017 person images: 2693\n",
-      "  → gate passed: 1482  (filtered out: 1211)\n",
-      "\n",
-      "Split sizes (post-filter):\n",
-      "  train: 20000\n",
-      "  test:  3000\n",
-      "  val:   1482\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# COCOアノテーション読み込み → キーポイントフィルタ → Split作成\n",
@@ -359,71 +287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "16707ce2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading train images...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Download -> train: 100%|██████████| 20000/20000 [52:09<00:00,  6.39it/s]  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  20000/20000 downloaded to C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\raw\\train\n",
-      "Downloading test images...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Download -> test: 100%|██████████| 3000/3000 [07:23<00:00,  6.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  3000/3000 downloaded to C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\raw\\test\n",
-      "Downloading val images...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Download -> val: 100%|██████████| 1482/1482 [03:39<00:00,  6.76it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  1482/1482 downloaded to C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\raw\\val\n",
-      "\n",
-      "Download complete!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# 画像ダウンロード\n",
@@ -491,27 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1449b1ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kiyod\\AppData\\Local\\Temp\\ipykernel_4476\\3830511831.py:36: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  state = torch.load(weight_path, map_location=DEVICE)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MEBOW loaded. Input size: (192, 256), Device: cuda\n",
-      "angle_to_class defined. (SAME=0, OPS=1, threshold=45deg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# MEBOWモデルのロードと角度推定\n",
@@ -623,18 +473,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0f95deaf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "export_split defined.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# MEBOW向き推定 + YOLO-Seg変換 — 関数定義\n",
@@ -809,89 +651,27 @@
    "id": "c573521f",
    "metadata": {},
    "source": [
-    "### エクスポート実行"
+    "## 6.1 エクスポート実行"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf87faf2",
+   "metadata": {},
+   "source": [
+    "`export_split()` を `train` / `test` / `val` それぞれに対して実行し、以下を出力します。\n",
+    "\n",
+    "- 画像：`data/dataset_frontback_yoloseg/images/{split}/`\n",
+    "- ラベル：`data/dataset_frontback_yoloseg/labels/{split}/`（YOLO-Seg形式）\n",
+    "- レポート：`data/dataset_frontback_yoloseg/reports/{split}_export_report.csv`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1e03cbb4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exporting train...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Export train: 100%|██████████| 20000/20000 [14:24<00:00, 23.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  train: 19865 kept, 135 skipped  |  Report: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\reports\\train_export_report.csv\n",
-      "\n",
-      "Exporting test...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Export test: 100%|██████████| 3000/3000 [02:07<00:00, 23.45it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  test: 2973 kept, 27 skipped  |  Report: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\reports\\test_export_report.csv\n",
-      "\n",
-      "Exporting val...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Export val: 100%|██████████| 1482/1482 [01:06<00:00, 22.37it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  val: 1476 kept, 6 skipped  |  Report: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\reports\\val_export_report.csv\n",
-      "\n",
-      "============================================================\n",
-      "Export Summary\n",
-      "============================================================\n",
-      "  train: 19865 kept, 135 skipped\n",
-      "  test: 2973 kept, 27 skipped\n",
-      "  val: 1476 kept, 6 skipped\n",
-      "\n",
-      "クラス分布 (person単位):\n",
-      "  train: OPS:48558, SAME:11913\n",
-      "  test: OPS:7296, SAME:1759\n",
-      "  val: OPS:3676, SAME:900\n",
-      "============================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# エクスポート実行\n",
@@ -940,28 +720,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "54a9ffaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data.yaml created:\n",
-      "----------------------------------------\n",
-      "path: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\n",
-      "train: images/train\n",
-      "val: images/val\n",
-      "test: images/test\n",
-      "names:\n",
-      "  0: same-dir-person\n",
-      "  1: ops-dir-person\n",
-      "\n",
-      "----------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# data.yaml 生成\n",
@@ -999,28 +761,7 @@
    "execution_count": null,
    "id": "0ec3f18f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==================================================\n",
-      "Dataset Summary\n",
-      "==================================================\n",
-      "  train: 19865 images, 19865 labels\n",
-      "  test :  2973 images,  2973 labels\n",
-      "  val  :  1476 images,  1476 labels\n",
-      "==================================================\n",
-      "data.yaml: C:\\Users\\kiyod\\yolo-pj\\seg-person-dir\\data\\dataset_frontback_yoloseg\\data.yaml\n",
-      "==================================================\n",
-      "\n",
-      "Next steps:\n",
-      "  1. Check labels with visualize_labels.py\n",
-      "  2. Train with: .\\train.ps1  or  python train.py\n",
-      "==================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================================\n",
     "# データセット確認\n",
@@ -1040,12 +781,6 @@
     "\n",
     "print(\"=\" * 50)\n",
     "print(f\"data.yaml: {DATA_OUT / 'data.yaml'}\")\n",
-    "print(\"=\" * 50)\n",
-    "print(\"\\nNext steps:\")\n",
-    "print(\"  1. Check labels with visualize_labels.py\")\n",
-    "print(\"  2. Train (PowerShell, run from seg-person-dir):\")\n",
-    "print(\"     .\\\\venv\\\\Scripts\\\\Activate.ps1\")\n",
-    "print(f\"     yolo segment train data={DATA_OUT / 'data.yaml'} model=yolo26s-seg.pt imgsz=512 epochs=50 batch=12 project=runs/segment name=frontback\")\n",
     "print(\"=\" * 50)"
    ]
   }
